# livenit_opensource_tools

./: .breakpoints  .replit  README.md  VENV.md  airport.py  analysis.py  app.py  crypto.py  flight.py  forms.py  gpt.py  iss.py  logic.py  main.py  primes.py  pyproject.toml  replit.nix  requirements.txt  reverse.py  robots.txt  superhero.py  weathers.py
.cache/replit/: __replit_disk_meta.json
templates/: ai-interview.html  ai-jewellery.html  airport.html  base.html  crypto.html  flights.html  genai-engineer.html  gpt.html  iss.html  iti_test.html  landing.html  manifest.json  nav.html  nft.html  prime.html  reverse.html  superhero.html  tax.html  user.html  weather.html  wrong.html
