[tool.poetry]
name = "repl_python3_test1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-Bootstrap = "^3.3.7"
Flask-WTF = "^0.15.1"
WTForms = "^2.3.3"
twilio = "^6.62.0"
replit = "^3.2.1"
email-validator = "^1.1.3"
Flask-Login = "^0.6.1"
googlemaps = "^4.6.0"
django-manifest = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
