[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
email-validator = "2.0.0.post2"
openai = "0.27.7"
Flask-WTF = "1.1.1"
Flask-Login = "0.6.2"
Flask-Bootstrap = "3.3.7.1"
tiktoken = "0.4.0"
googlemaps = "4.10.0"
WTForms = "3.0.1"
Flask-Cors = "3.0.10"
django-manifest = "0.2.1"
twilio = "8.2.1"
InSilicoSeq = "^1.5.4"
requests = "^2.31.0"
analysis = "^0.1.7"
gpt = "^0.2"
jmbo-superhero = "^0.1"
pytz = "^2023.3.post1"
logic-toolchain = "^0.0.2"
weathers = "^1.2.1"
Redberry = "^0.0.7"
crypto = "^1.4.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"